<resources>

    <!-- The Boring Stuff -->
    <string name="app_name">PAMIAS</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Alarm stuff -->
    <string name="deactivate">Deactivate</string>
    <string name="alarm_set">Alarm Set:</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="schedule_alarm">Schedule Alarm</string>
    <string name="schedule_alarm_btn">Schedule Alarm</string>

    <!-- Settings Stuff -->
    <string name="settings">Settings</string>
    <string name="more_settings">More Settings</string>
    <string name="even_more_settings">Even More Settings</string>

    <string name="interactions">Interactions</string>
    <string name="mental_interactions">Mental Interactions</string>
    <string name="physical_interactions">Physical Interactions</string>

    <!-- Instructions Fragment -->
    <string name="instructions">Instructions</string>
    <string name="solve_this_card">Solve this card</string>

    <!-- Super Duper Important Stuff -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>